--- a/src/pug/parts/index/index-link.html
+++ b/src/pug/parts/index/index-link.html
@@ -1,3 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/libs.min.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
