--- a/src/index.html
+++ b/src/index.html
@@ -16,17 +16,14 @@
 	<!--[if lt IE 9]>
   		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
 	<![endif]-->
+
 	<link rel="stylesheet" type="text/css" href="css/libs.min.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
+<footer>
 
-
-	<footer>
-	
-	</footer>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="js/libs.min.js"></script>
-	<script src="js/index.js"></script>
+</footer>	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script data-main="js/bundle-index" src="js/require.js"></script>
 </body>
 </html>
