--- a/src/pug/parts/index/index-src.html
+++ b/src/pug/parts/index/index-src.html
@@ -1,5 +1,4 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="js/libs.min.js"></script>
-	<script src="js/index.js"></script>
+	<script data-main="js/bundle-index" src="js/require.js"></script>
 </body>
 </html>
